# QMidi

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  meson.build
examples/qtplaysmf/: playsmf.cpp  qtplaysmf.pro
meson/: native-haiku.txt  native-osx.txt  native-unix.txt  native-windows.txt
src/: QMidi.cpp  QMidi.h  QMidi.pri  QMidiFile.cpp  QMidiFile.h  QMidiIn.cpp  QMidiIn.h  QMidiOut.cpp  QMidiOut.h  QtMidi.cpp  QtMidi.h  QtMidi.pri  QtMidiFile.cpp  QtMidiFile.h
src/OS/: QMidi_ALSA.cpp  QMidi_ALSA.h  QMidi_CoreMidi.cpp  QMidi_Haiku.cpp  QMidi_Haiku.h  QMidi_Win32.cpp
